# diploma_data_analysis

./: .gitignore  README.md  pyproject.toml
lecture_note/: class_note.tex
scripts/: Exercise_NAO.ipynb  enso34.sh  fft_enso.py  get_era5_sst.py  monsoon_days_variability.py  plot_enso_index.py
